# aegis-consent

./: LICENSE  README.md  llms.txt  pyproject.toml
aegis/: __init__.py  cli.py  consent.py  mcp_server.py  schema.py
examples/: consent-graph.example.json  quickstart.py
tests/: test_consent.py
