[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aegis-consent"
version = "0.1.0"
description = "Consent Graph as Code: deterministic action governance for AI agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Michael Martoccia", email = "mmartoccia@gmail.com" },
]
keywords = [
    "ai",
    "agents",
    "governance",
    "consent",
    "safety",
    "autonomy",
    "mcp",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0",
    "click>=8.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "hatch",
    "build",
    "twine",
]

[project.urls]
Homepage = "https://github.com/mmartoccia/aegis-consent"
Repository = "https://github.com/mmartoccia/aegis-consent"
Issues = "https://github.com/mmartoccia/aegis-consent/issues"

[project.scripts]
aegis = "aegis.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["aegis"]

[tool.pytest.ini_options]
testpaths = ["tests"]
